--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
 
 /* INIZIO LATO SINISTRO */
 .whatsappLeft {
-  background-color: blue;
+  /* background-color: blue; */
   width: 30%;
   min-height: 100%;
   display: flex;
@@ -80,7 +80,7 @@ body {
 
 .nuRight > .fas {
   color: #b1b1b1;
-  margin-right: 10px;
+  margin-right: 15px;
   font-size: 20px;
 }
 
@@ -185,7 +185,9 @@ body {
   flex: 1;
   padding-top: 10px;
 }
-
+.cCLtextSubtitle {
+  color: #c7cacb;
+}
 
 
 .cCRight{
@@ -196,9 +198,7 @@ body {
   align-items: flex-start;
   justify-content: flex-end;
 }
-.cCLtextSubtitle {
-  color: #c7cacb;
-}
+
 .cCRtextSubtitle {
   margin-top: 10px;
   margin-right: 10px;
@@ -217,11 +217,6 @@ body {
   cursor: pointer;
 }
 
-
-
-
-
-
 /* INIZIO LATO DESTRO */
 .whatsappRight {
   background-color: purple;
@@ -230,15 +225,87 @@ body {
   display: flex;
   flex-direction: column;
 }
+/* 1/3 navChat */
 .navChat {
   background-color: #EAEAEA;
   height: 90px;
+  display: flex;
 }
+
+
+.navChatLeft{
+  /* background-color: blue; */
+  height: 100%;
+  width: 80%;
+  display: flex;
+  /* justify-content: left; */
+  align-items: center;
+}
+
+.navChatLimage {
+  height: 90px;
+  width: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navChatLimage > img {
+  border-radius: 50%;
+  height: 70px;
+  /* margin-left: 10px; */
+}
+
+.navChatLname {
+  /* background-color: blue; */
+  text-align: left;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.navChatLnameTitle{
+  flex: 1;
+  /* background-color: yellow; */
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 5px;
+}
+.navChatLnameSubtitle{
+  padding-top: 5px;
+  flex: 1;
+  /* background-color: green; */
+}
+
+
+/* .cCLtextSubtitle {
+  color: #c7cacb;
+} */
+
+.navChatRight{
+  /* background-color: red; */
+  height: 100%;
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.navChatRight > .fas {
+  color: #b1b1b1;
+  margin-right: 15px;
+  font-size: 20px;
+}
+
+
+/* 2/3 Chat grande */
 .chat {
   background-color: #dcd4cd;
   flex: 1;
   background-image: url(../img/mine.jpg);
 }
+/* 3/3 scrivimessaggio */
 .scriviMessaggio {
   background-color: #f4eee9;
   height: 90px;
