--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .container {
   height: 90vh;
   width: 80vw;
@@ -29,7 +30,9 @@ body {
   width: 100%;
   background-color: pink;
   display: flex;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 
 /* INIZIO LATO SINISTRO */
 .whatsappLeft {
@@ -305,9 +308,125 @@ body {
   flex: 1;
   background-image: url(../img/mine.jpg);
 }
+
+.paginaMessaggiata {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+
+.Michele {
+  /* background-color: red; */
+  display: none;
+}
+
+.Fabio {
+  /* background-color: blue; */
+  display: none;
+}
+.Samuele {
+  /* background-color: green; */
+  display: none;
+}
+.Luisa {
+  /* background-color: yellow; */
+  display: none;
+}
+
+
+
+.conversazioneInCorso {
+  display: block;
+  /* il block va posizionato opo la dichiarazione di display none, o gli va aggiunta !important se no l'ulitimo display: qualcosa ; decide */
+}
+.rigaMessaggi {
+  width: 100%;
+  display: flex;
+  /* border: 1px solid black; */
+  padding: 20px;
+}
+
+.box-chat {
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  min-width: 300px;
+}
+
+.flexInv {
+  justify-content: flex-end;
+}
+
+.flexRic {
+  justify-content: flex-start;
+}
+
+.Inviati {
+  background-color: #cbfbb3;
+}
+.Ricevuti {
+  background-color: white;
+}
+
+.mex {
+  text-align: left;
+}
+
+.dataOraMex{
+  color: grey;
+  text-align: right;
+  font-size: 10px;
+}
+
+
 /* 3/3 scrivimessaggio */
 .scriviMessaggio {
   background-color: #f4eee9;
   height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+
+.scriviInputContainer {
+  width: 90%;
+  height: 100%;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+
+.scriviInputContainer > .fas,.far {
+  color: #b5b9bb;
+  margin-left: 10px;
+  font-size: 30px;
+}
+
+.scriviChatBar {
+  border: none;
+  color: #b5b9bb;
+  height: 70%;
+  width: 85%;
+  margin-left: 10px;
+  padding-left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* FINE LATO DESTRO */
