--- a/quarto milestone/css/style.css
+++ b/quarto milestone/css/style.css
@@ -244,7 +244,7 @@ body {
 .navChatLeft{
   /* background-color: blue; */
   height: 100%;
-  width: 80%;
+  width: 50%;
   display: flex;
   /* justify-content: left; */
   align-items: center;
@@ -287,16 +287,53 @@ body {
 
 .navChatRight{
   height: 100%;
-  width: 20%;
+  width: 50%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
-.navChatRight .fas {
+.cercaOiniziaChat-n {
+  /* background-color: red; */
+  height: 40px;
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-right: 5%;
+}
+
+.cOiCinputContainer-n {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.cercaChatsearchBar-n {
+  border: none;
+  color: #b5b9bb;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  padding-left: 5px;
+}
+
+.iconeNavbarContainer {
+  /* background-color: red; */
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.iconeNavbarContainer .fas {
   color: #b1b1b1;
   margin-right: 15px;
   font-size: 20px;
+  cursor: pointer;
 }
 
 input[type="file"] {
